fix: chatButton position on mobile

--- a/src/app/components/Chat/components/ChatButton/ChatButton.module.css
+++ b/src/app/components/Chat/components/ChatButton/ChatButton.module.css
@@ -47,5 +47,6 @@
   .chatButton {
     width: 100px;
     right: -20px;
+    top: 75%;
   }
 }
